Fixes warnings and typos issues